--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
             "Skadimoolam\\CrudGenerator\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "php": ">=7.0",
+        "laravel": ">=7.0.0"
+    }
 }
